hsv, binary mask

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,8 @@
     "    for line in lines:\n",
     "        for x1,y1,x2,y2 in line:\n",
     "            slope = np.polyfit((x1,x2),(y1,y2),1)[0]\n",
-    "#             print(slope)\n",
+    "            #split lines based on slope\n",
+    "            #provide range to reduce noisy lines\n",
     "            if slope>0.3 and slope<0.8:\n",
     "                right_points.append((x1,y1))\n",
     "                right_points.append((x2,y2))\n",
@@ -247,17 +248,11 @@
     "                left_points.append((x1,y1))\n",
     "                left_points.append((x2,y2))\n",
     "                left.append(line)\n",
-    "#     for line in right: \n",
-    "#         for x1,y1,x2,y2 in line:\n",
-    "#             cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
-    "            \n",
-    "#     for line in left: \n",
-    "#         for x1,y1,x2,y2 in line:\n",
-    "#             cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
+    "\n",
     "    draw_best_fit(img, right_points, color, thickness)\n",
     "    draw_best_fit(img, left_points, color, thickness)\n",
     "    \n",
-    "def draw_best_fit(img, points, color, thickness):\n",
+    "def draw_best_fit(img, points, color, thickness): #funtion to run linear regression on a set of points\n",
     "    if len(points)==0:\n",
     "        return\n",
     "    X,Y = zip(*points)\n",
@@ -302,7 +297,35 @@
     "    initial_img * α + img * β + γ\n",
     "    NOTE: initial_img and img must be the same shape!\n",
     "    \"\"\"\n",
-    "    return cv2.addWeighted(initial_img, α, img, β, γ)"
+    "    return cv2.addWeighted(initial_img, α, img, β, γ)\n",
+    "\n",
+    "def get_lane_lines_mask(hsv_image, colors):\n",
+    "    \"\"\"\n",
+    "    Image binarization using a list of colors. The result is a binary mask\n",
+    "    which is a sum of binary masks for each color.\n",
+    "    \"\"\"\n",
+    "    masks = []\n",
+    "    for color in colors:\n",
+    "        if 'low_th' in color and 'high_th' in color:\n",
+    "            mask = cv2.inRange(hsv_image, color['low_th'], color['high_th'])\n",
+    "            if 'kernel' in color:\n",
+    "                mask = cv2.morphologyEx(mask, cv2.MORPH_OPEN, color['kernel'])\n",
+    "            masks.append(mask)\n",
+    "        else: raise Exception('High or low threshold values missing')\n",
+    "    if masks:\n",
+    "        return cv2.add(*masks)\n",
+    "def gimp_to_opencv_hsv(*hsv):\n",
+    "    \"\"\"\n",
+    "    I use GIMP to visualize colors. This is a simple\n",
+    "    GIMP => CV2 HSV format converter.\n",
+    "    \"\"\"\n",
+    "    return (hsv[0] / 2, hsv[1] / 100 * 255, hsv[2] / 100 * 255)\n",
+    "\n",
+    "def draw_binary_mask(binary_mask, img):\n",
+    "    masked_image = np.zeros_like(img)\n",
+    "    for i in range(3): \n",
+    "        masked_image[:,:,i] = binary_mask.copy()\n",
+    "    return masked_image"
    ]
   },
   {
@@ -317,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +354,7 @@
        " 'whiteCarLaneSwitch.jpg']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,15 +383,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
     "# then save them to the test_images_output directory.\n",
     "folder = \"test_images/\"\n",
+    "WHITE_LINES = { 'low_th': gimp_to_opencv_hsv(0, 0, 80),\n",
+    "                'high_th': gimp_to_opencv_hsv(359, 10, 100) }\n",
+    "\n",
+    "YELLOW_LINES = { 'low_th': gimp_to_opencv_hsv(35, 20, 30),\n",
+    "                 'high_th': gimp_to_opencv_hsv(65, 100, 100),\n",
+    "                 'kernel': np.ones((3,3),np.uint64)}\n",
     "for file in os.listdir(folder):\n",
     "    image = mpimg.imread(folder + file)\n",
+    "    \n",
+    "    hsv_image = cv2.cvtColor(image, cv2.COLOR_RGB2HSV)\n",
+    "    plt.imsave(\"test_images_output/hsv_image/\"+file,hsv_image)\n",
+    "    binary_mask = get_lane_lines_mask(hsv_image, [WHITE_LINES, YELLOW_LINES])\n",
+    "    masked_image = draw_binary_mask(binary_mask, hsv_image)\n",
+    "    plt.imsave(\"test_images_output/binary_masked_image/\"+file,masked_image)\n",
+    "\n",
     "    h,w = image.shape[:2]\n",
     "    \n",
     "    gray = cv2.cvtColor(image,cv2.COLOR_RGB2GRAY)\n",
@@ -376,26 +412,32 @@
     "    # Define a kernel size and apply Gaussian smoothing\n",
     "    kernel_size = 5\n",
     "    blur_gray = cv2.GaussianBlur(gray,(kernel_size, kernel_size),0)\n",
+    "    plt.imsave(\"test_images_output/blurred_image/\"+file,line_image)\n",
     "\n",
     "    # Define our parameters for Canny and apply\n",
     "    low_threshold = 50\n",
     "    high_threshold = 150\n",
-    "    canny_image = canny(blur_gray,low_threshold,high_threshold)\n",
+    "    canny_image = canny(masked_image,low_threshold,high_threshold)\n",
+    "    canny_image_gau = canny(blur_gray,low_threshold,high_threshold)\n",
+    "    plt.imsave(\"test_images_output/hsv_canny/\"+file,canny_image)\n",
+    "    plt.imsave(\"test_images_output/gaussian_canny/\"+file,canny_image_gau)\n",
     "\n",
-    "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (int(round(w*1.021)) ,h)]], dtype=np.int32)\n",
+    "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (w ,h)]], dtype=np.int32)\n",
     "    masked_image = region_of_interest(canny_image,vertices)\n",
+    "    plt.imsave(\"test_images_output/roi_image/\"+file,masked_image)\n",
     "\n",
     "    rho = 2 # distance resolution in pixels of the Hough grid\n",
     "    theta = np.pi/180 # angular resolution in radians of the Hough grid\n",
     "    threshold = 15     # minimum number of votes (intersections in Hough grid cell)\n",
-    "    min_line_length = 40 #minimum number of pixels making up a line\n",
-    "    max_line_gap = 20    # maximum gap in pixels between connectable line segments\n",
+    "    min_line_length = 20 #minimum number of pixels making up a line\n",
+    "    max_line_gap = 30    # maximum gap in pixels between connectable line segments\n",
     "    line_image = np.copy(image)*0 # creating a blank to draw lines on\n",
     "    # Run Hough on edge detected image\n",
     "    line_image = hough_lines(masked_image, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "    plt.imsave(\"test_images_output/line_image/\"+file,line_image)\n",
     "\n",
     "    w_image = weighted_img(line_image, image)\n",
-    "    plt.imsave(\"test_images_output/\"+file,w_image)"
+    "    plt.imsave(\"test_images_output/final/\"+file,w_image)"
    ]
   },
   {
@@ -425,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +486,12 @@
     "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
+    "    hsv_image = cv2.cvtColor(image, cv2.COLOR_RGB2HSV)\n",
+    "    binary_mask = get_lane_lines_mask(hsv_image, [WHITE_LINES, YELLOW_LINES])\n",
+    "    masked_image = draw_binary_mask(binary_mask, hsv_image)\n",
+    "\n",
     "    h,w = image.shape[:2]\n",
+    "    \n",
     "    gray = cv2.cvtColor(image,cv2.COLOR_RGB2GRAY)\n",
     "\n",
     "    # Define a kernel size and apply Gaussian smoothing\n",
@@ -454,22 +501,23 @@
     "    # Define our parameters for Canny and apply\n",
     "    low_threshold = 50\n",
     "    high_threshold = 150\n",
-    "    canny_image = canny(blur_gray,low_threshold,high_threshold)\n",
+    "    canny_image = canny(masked_image,low_threshold,high_threshold)\n",
+    "#     plt.imsave(\"test_images_output/\"+file,canny_image)\n",
     "\n",
-    "    vertices = np.array([[(int(round(w*0.109)) ,h),(int(round(w*0.45)) ,int(round(h*0.611))), (int(round(w*0.548)), int(round(h*0.611))), (w ,h)]], dtype=np.int32)\n",
+    "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (w ,h)]], dtype=np.int32)\n",
     "    masked_image = region_of_interest(canny_image,vertices)\n",
+    "#     plt.imsave(\"test_images_output/\"+file,masked_image)\n",
     "\n",
     "    rho = 2 # distance resolution in pixels of the Hough grid\n",
     "    theta = np.pi/180 # angular resolution in radians of the Hough grid\n",
     "    threshold = 15     # minimum number of votes (intersections in Hough grid cell)\n",
-    "    min_line_length = 40 #minimum number of pixels making up a line\n",
-    "    max_line_gap = 20    # maximum gap in pixels between connectable line segments\n",
+    "    min_line_length = 20 #minimum number of pixels making up a line\n",
+    "    max_line_gap = 30    # maximum gap in pixels between connectable line segments\n",
     "    line_image = np.copy(image)*0 # creating a blank to draw lines on\n",
     "    # Run Hough on edge detected image\n",
     "    line_image = hough_lines(masked_image, rho, theta, threshold, min_line_length, max_line_gap)\n",
     "\n",
     "    result = weighted_img(line_image, image)\n",
-    "#     cv2.line(result, (int(round(w*0.109)) ,h),(int(round(w*0.45)), int(round(h*0.621))), (0,255,0), 3)\n",
     "    return result"
    ]
   },
@@ -482,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:05<00:00, 38.22it/s]\n"
+      "100%|█████████▉| 221/222 [00:08<00:00, 26.57it/s]\n"
      ]
     },
     {
@@ -507,8 +555,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
       "\n",
-      "CPU times: user 3.53 s, sys: 512 ms, total: 4.04 s\n",
-      "Wall time: 6.59 s\n"
+      "CPU times: user 7.98 s, sys: 1.19 s, total: 9.17 s\n",
+      "Wall time: 9.3 s\n"
      ]
     }
    ],
@@ -533,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +596,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 681/682 [00:21<00:00, 31.21it/s]\n"
+      "100%|█████████▉| 681/682 [00:26<00:00, 25.40it/s]\n"
      ]
     },
     {
@@ -606,8 +654,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft.mp4 \n",
       "\n",
-      "CPU times: user 11.7 s, sys: 1.58 s, total: 13.3 s\n",
-      "Wall time: 22.7 s\n"
+      "CPU times: user 25.7 s, sys: 3.67 s, total: 29.3 s\n",
+      "Wall time: 27.7 s\n"
      ]
     }
    ],
@@ -675,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 251/251 [00:14<00:00, 17.65it/s]\n"
+      "100%|██████████| 251/251 [00:18<00:00, 13.70it/s]\n"
      ]
     },
     {
@@ -700,8 +748,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
       "\n",
-      "CPU times: user 7.41 s, sys: 1.59 s, total: 9 s\n",
-      "Wall time: 15.8 s\n"
+      "CPU times: user 16.7 s, sys: 2.59 s, total: 19.3 s\n",
+      "Wall time: 20 s\n"
      ]
     }
    ],
