--- a/P1.ipynb
+++ b/P1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11e724898>"
+       "<matplotlib.image.AxesImage at 0x1152bbc50>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +249,8 @@
     "                left_points.append((x2,y2))\n",
     "                left.append(line)\n",
     "\n",
-    "    draw_best_fit(img, right_points, color, thickness)\n",
-    "    draw_best_fit(img, left_points, color, thickness)\n",
+    "    draw_best_fit(img, right_points, color, thickness)#apply linear regression on points in right line\n",
+    "    draw_best_fit(img, left_points, color, thickness)#similarly for left line\n",
     "    \n",
     "def draw_best_fit(img, points, color, thickness): #funtion to run linear regression on a set of points\n",
     "    if len(points)==0:\n",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        " 'whiteCarLaneSwitch.jpg']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,13 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
     "# then save them to the test_images_output directory.\n",
     "folder = \"test_images/\"\n",
+    "#color values for binary mask\n",
     "WHITE_LINES = { 'low_th': gimp_to_opencv_hsv(0, 0, 80),\n",
     "                'high_th': gimp_to_opencv_hsv(359, 10, 100) }\n",
     "\n",
@@ -399,32 +400,35 @@
     "for file in os.listdir(folder):\n",
     "    image = mpimg.imread(folder + file)\n",
     "    \n",
+    "    #change to hsv and then binary\n",
     "    hsv_image = cv2.cvtColor(image, cv2.COLOR_RGB2HSV)\n",
-    "    plt.imsave(\"test_images_output/hsv_image/\"+file,hsv_image)\n",
+    "    cv2.imwrite(\"test_images_output/hsv_image/\"+file,hsv_image)\n",
     "    binary_mask = get_lane_lines_mask(hsv_image, [WHITE_LINES, YELLOW_LINES])\n",
     "    masked_image = draw_binary_mask(binary_mask, hsv_image)\n",
-    "    plt.imsave(\"test_images_output/binary_masked_image/\"+file,masked_image)\n",
+    "    cv2.imwrite(\"test_images_output/binary_masked_image/\"+file,masked_image)\n",
     "\n",
     "    h,w = image.shape[:2]\n",
     "    \n",
+    "    #change to grayscale and then apply gaussian smoothing\n",
     "    gray = cv2.cvtColor(image,cv2.COLOR_RGB2GRAY)\n",
-    "\n",
     "    # Define a kernel size and apply Gaussian smoothing\n",
+    "    cv2.imwrite(\"test_images_output/gray_image/\"+file,gray)\n",
     "    kernel_size = 5\n",
     "    blur_gray = cv2.GaussianBlur(gray,(kernel_size, kernel_size),0)\n",
-    "    plt.imsave(\"test_images_output/blurred_image/\"+file,line_image)\n",
+    "    cv2.imwrite(\"test_images_output/blurred_image/\"+file,blur_gray)\n",
     "\n",
     "    # Define our parameters for Canny and apply\n",
     "    low_threshold = 50\n",
     "    high_threshold = 150\n",
     "    canny_image = canny(masked_image,low_threshold,high_threshold)\n",
     "    canny_image_gau = canny(blur_gray,low_threshold,high_threshold)\n",
-    "    plt.imsave(\"test_images_output/hsv_canny/\"+file,canny_image)\n",
-    "    plt.imsave(\"test_images_output/gaussian_canny/\"+file,canny_image_gau)\n",
-    "\n",
+    "    cv2.imwrite(\"test_images_output/hsv_canny/\"+file,canny_image)\n",
+    "    cv2.imwrite(\"test_images_output/gaussian_canny/\"+file,canny_image_gau)\n",
+    "    \n",
+    "    #vertices of the region of interest specified in the form of ratios of dimensions of the image\n",
     "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (w ,h)]], dtype=np.int32)\n",
     "    masked_image = region_of_interest(canny_image,vertices)\n",
-    "    plt.imsave(\"test_images_output/roi_image/\"+file,masked_image)\n",
+    "    cv2.imwrite(\"test_images_output/roi_image/\"+file,masked_image)\n",
     "\n",
     "    rho = 2 # distance resolution in pixels of the Hough grid\n",
     "    theta = np.pi/180 # angular resolution in radians of the Hough grid\n",
@@ -434,10 +438,10 @@
     "    line_image = np.copy(image)*0 # creating a blank to draw lines on\n",
     "    # Run Hough on edge detected image\n",
     "    line_image = hough_lines(masked_image, rho, theta, threshold, min_line_length, max_line_gap)\n",
-    "    plt.imsave(\"test_images_output/line_image/\"+file,line_image)\n",
+    "    cv2.imwrite(\"test_images_output/line_image/\"+file,line_image)\n",
     "\n",
     "    w_image = weighted_img(line_image, image)\n",
-    "    plt.imsave(\"test_images_output/final/\"+file,w_image)"
+    "    cv2.imwrite(\"test_images_output/final/\"+file,w_image)"
    ]
   },
   {
@@ -486,27 +490,22 @@
     "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
+    "    \n",
+    "    #change to hsv and then binary\n",
     "    hsv_image = cv2.cvtColor(image, cv2.COLOR_RGB2HSV)\n",
     "    binary_mask = get_lane_lines_mask(hsv_image, [WHITE_LINES, YELLOW_LINES])\n",
     "    masked_image = draw_binary_mask(binary_mask, hsv_image)\n",
     "\n",
     "    h,w = image.shape[:2]\n",
     "    \n",
-    "    gray = cv2.cvtColor(image,cv2.COLOR_RGB2GRAY)\n",
-    "\n",
-    "    # Define a kernel size and apply Gaussian smoothing\n",
-    "    kernel_size = 5\n",
-    "    blur_gray = cv2.GaussianBlur(gray,(kernel_size, kernel_size),0)\n",
-    "\n",
     "    # Define our parameters for Canny and apply\n",
     "    low_threshold = 50\n",
     "    high_threshold = 150\n",
     "    canny_image = canny(masked_image,low_threshold,high_threshold)\n",
-    "#     plt.imsave(\"test_images_output/\"+file,canny_image)\n",
     "\n",
+    "    #vertices of the region of interest specified in the form of ratios of dimensions of the image\n",
     "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (w ,h)]], dtype=np.int32)\n",
     "    masked_image = region_of_interest(canny_image,vertices)\n",
-    "#     plt.imsave(\"test_images_output/\"+file,masked_image)\n",
     "\n",
     "    rho = 2 # distance resolution in pixels of the Hough grid\n",
     "    theta = np.pi/180 # angular resolution in radians of the Hough grid\n",
