--- a/P1.ipynb
+++ b/P1.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        " 'whiteCarLaneSwitch.jpg']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,10 +438,10 @@
     "    line_image = np.copy(image)*0 # creating a blank to draw lines on\n",
     "    # Run Hough on edge detected image\n",
     "    line_image = hough_lines(masked_image, rho, theta, threshold, min_line_length, max_line_gap)\n",
-    "    cv2.imwrite(\"test_images_output/line_image/\"+file,line_image)\n",
+    "    plt.imsave(\"test_images_output/line_image/\"+file,line_image)\n",
     "\n",
     "    w_image = weighted_img(line_image, image)\n",
-    "    cv2.imwrite(\"test_images_output/final/\"+file,w_image)"
+    "    plt.imsave(\"test_images_output/final/\"+file,w_image)"
    ]
   },
   {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:08<00:00, 26.57it/s]\n"
+      "100%|█████████▉| 221/222 [00:07<00:00, 27.79it/s]\n"
      ]
     },
     {
@@ -554,8 +554,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
       "\n",
-      "CPU times: user 7.98 s, sys: 1.19 s, total: 9.17 s\n",
-      "Wall time: 9.3 s\n"
+      "CPU times: user 7.37 s, sys: 1.04 s, total: 8.4 s\n",
+      "Wall time: 8.39 s\n"
      ]
     }
    ],
