--- a/P1.ipynb
+++ b/P1.ipynb
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1152bbc50>"
+       "<matplotlib.image.AxesImage at 0x114eeccc0>"
       ]
      },
      "execution_count": 2,
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        " 'whiteCarLaneSwitch.jpg']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
     "    canny_image = canny(masked_image,low_threshold,high_threshold)\n",
     "\n",
     "    #vertices of the region of interest specified in the form of ratios of dimensions of the image\n",
-    "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (w ,h)]], dtype=np.int32)\n",
+    "    vertices = np.array([[(int(round(w*0.104)) ,h),(int(round(w*0.448)) ,int(round(h*0.621))), (int(round(w*0.548)), int(round(h*0.621))), (w*0.97 ,h)]], dtype=np.int32)\n",
     "    masked_image = region_of_interest(canny_image,vertices)\n",
     "\n",
     "    rho = 2 # distance resolution in pixels of the Hough grid\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:07<00:00, 27.79it/s]\n"
+      "100%|█████████▉| 221/222 [00:08<00:00, 19.24it/s]\n"
      ]
     },
     {
@@ -554,8 +554,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
       "\n",
-      "CPU times: user 7.37 s, sys: 1.04 s, total: 8.4 s\n",
-      "Wall time: 8.39 s\n"
+      "CPU times: user 7.47 s, sys: 1.06 s, total: 8.53 s\n",
+      "Wall time: 9.23 s\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 681/682 [00:26<00:00, 25.40it/s]\n"
+      "100%|█████████▉| 681/682 [00:27<00:00, 26.46it/s]\n"
      ]
     },
     {
@@ -653,8 +653,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft.mp4 \n",
       "\n",
-      "CPU times: user 25.7 s, sys: 3.67 s, total: 29.3 s\n",
-      "Wall time: 27.7 s\n"
+      "CPU times: user 24.1 s, sys: 3.13 s, total: 27.3 s\n",
+      "Wall time: 27.9 s\n"
      ]
     }
    ],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 251/251 [00:18<00:00, 13.70it/s]\n"
+      "100%|██████████| 251/251 [00:17<00:00, 14.52it/s]\n"
      ]
     },
     {
@@ -747,8 +747,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
       "\n",
-      "CPU times: user 16.7 s, sys: 2.59 s, total: 19.3 s\n",
-      "Wall time: 20 s\n"
+      "CPU times: user 15.2 s, sys: 2.22 s, total: 17.5 s\n",
+      "Wall time: 18.9 s\n"
      ]
     }
    ],
